Edit to grouped data summaries.

--- a/03-discriptive.Rmd
+++ b/03-discriptive.Rmd
@@ -239,8 +239,17 @@ plt3 <- chicks %>%
   labs(y = "Chicken mass (g)") + theme_pubr()
 ```
 
+```{r}
+plt4 <- chicks %>%
+  filter(Time %in% c(10, 21)) %>% 
+  ggplot(aes(x = Diet, y = weight, fill = as.factor(Time))) +
+  geom_boxplot() +
+  geom_jitter(shape = 21, width = 0.1) +
+  labs(y = "Chicken mass (g)", fill = "Time") + theme_pubr()
+```
+
 ```{r, message = FALSE, fig.cap = "A) Scatterplot of the mean and raw chicken mass values. B) Bar graph of the chicken mass values, showing 'whiskers' indicating ±1 SD. C) Box and whisker plot of the chicken mass data. Please see the help file for `geom_boxplot()` for what the graph components mean."}
-ggarrange(plt1, plt2, plt3, ncol = 2, nrow = 2, labels = "AUTO")
+ggarrange(plt1, plt2, plt3, plt4, ncol = 2, nrow = 2, labels = "AUTO")
 ```
 
 
