--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,4 +1,3 @@
-
 # Introduction
 
 > *"A scientist worthy of a lab coat should be able to make original discoveries while wearing a clown suit, or give a lecture in a high squeaky voice from inhaling helium. It is written nowhere in the math of probability theory that one may have no fun."*
@@ -21,7 +20,7 @@ knitr::opts_chunk$set(
 
 ## Venue, date and time
 
-Quantitative Ecology is scheduled to replace Plant Ecophysiology, and will run between May 14th and June 29th, 2018. This workshop will take place from **9:00--16:00** on one day in each week during this period. There will also be a field component, where you will be taught about ecological field sampling in marine and terrestrial environments; this will also offer an opportunity to collect real data using actual ecological field methods (these will also be covered in the course), which we will then analyse using the multivariate methods used in this workshop.
+Quantitative Ecology is scheduled to replace Plant Ecophysiology, and will run between May 14th and June 29th, 2018. This workshop will take place from **9:00--16:00** on one day in each week during this period. There will also be a field component, where you will be taught about ecological field sampling in marine and terrestrial environments; this will also offer an opportunity to collect real data using actual ecological field methods (these will also be covered in the course), which we will then analyse using the multivariate methods learned in this workshop.
 
 ## Course outline
 
@@ -30,26 +29,26 @@ Quantitative Ecology is scheduled to replace Plant Ecophysiology, and will run b
 * Measures of dispersion and variability
 * Distributions
 * Graphical data displays
-* T-tests (one- and two-sample, etc.)
-* Confidence intervals
-* ANOVA (one- and two-way)
-* Linear mixed models
 * Testing assumptions; transformations
+* Confidence intervals
+* T-tests (one- and two-sample, etc.)
+* ANOVA (one- and two-way)
 * Non-parametric tests (Mann-Whitney, Kruskal-Wallis)
 * Chi-square tests
 * Correlation
 * Linear models (linear regression)
 * Generalised linear models
+* Linear mixed models
 
 ## About this Workshop
 
-The aim of this five-day introductory workshop is to guide you through...
+The aim of this five-day introductory workshop is to guide you through the outline given above.
 
 ## This is biology: why more R coding?
 
 Please refer to the [Intro R Workshop: Data Manipulation, Analysis and Graphing](https://robwschlegel.github.io/Intro_R_Workshop/) for why we feel strongly that you use R [@R2017] for the analyses that we will perform here. All of the reasons provided there are valid here too, but one reason perhaps more so than others --- R and RStudio promote the principles of *reproducible research*, and in fact make it very easy to implement. We will focus on some of these principles throughout the workshop, and the assignments will in fact require that you submit a fully functional working script, complete with all the notes, memos, examples, data, executable code, and output that will result from completing the course material. 
 
-What other oprions are there for analysing the kinds of data that we will encounter in biological research? Software packages like the ones you may be familiar with, such as Statistica and SPSS, are often used to perform many of the analyses we will encounter. They are rather limited with regards to the full scope of modern statistical methods in use by biologists today, but many people still use these kinds of software as the provide the basic kinds analyses that still form the staple of the biological and medical sciewnces. For the many reasons provided above, we prefer to use R as the *engine* within which to do our biological data analysis. R is used by academic statisticians the world over, and it is therefore an excellent choice for our purpose here...
+What other options are there for analysing the kinds of data that we will encounter in biological research? Software packages like the ones you may be familiar with, such as Statistica and SPSS, are often used to perform many of these analyses. They are rather limited with regards to the full scope of modern statistical methods in use by biologists today, but many people still use these kinds of software as they provide the basic kinds analyses that still form the staple of the biological and medical sciences. For the many reasons provided above, we prefer to use R as the *engine* within which to do our biological data analysis. R is used by academic statisticians the world over, and it is therefore an excellent choice for our purpose here.
 
 ## Installing R and RStudio
 
@@ -65,7 +64,7 @@ We assume that you already have R installed on your computer, as all of you will
 
 ## Style and code conventions
 
-Early on, develop the habit of unambiguous and consistent style and formatting when writing your code, or anything else for that matter. Pay attention to detail and be pedantic. This will benefit your scientific writing in general. Although many R commands rely on precisely formatted statements (code blocks), style can nevertheless to *some extent* have a personal flavour to it. The key is *consistency*. In this book we use certain conventions to improve readability. We use a consistent set of conventions to refer to code, and in particular to typed commands and package names.
+Early on, develop the habit of unambiguous and consistent style and formatting when writing your code, or anything else for that matter. Pay attention to detail and be pedantic. This will benefit your scientific writing in general. Although many R commands rely on precisely formatted statements (code blocks), style can nevertheless to *some extent* have a personal flavour to it. The key is *consistency*. In this book we use certain conventions to improve readability. We also use a consistent set of conventions to refer to code, and in particular to typed commands and package names.
 
   * Package names are shown in a bold font over a grey box, *e.g.* __`tidyr`__.
   * Functions are shown in normal font followed by parentheses and also over a grey box , *e.g.* `plot()`, or `summary()`.
@@ -83,7 +82,7 @@ Consult these resources for more about R code style :
   * [The tidyverse style guide](http://style.tidyverse.org)
   * [Hadley Wickham's advanced R style guide](http://adv-r.had.co.nz/Style.html)
 
-We can also insert maths expressions, like this $f(k) = {n \choose k} p^{k} (1-p)^{n-k}$ or this: $$f(k) = {n \choose k} p^{k} (1-p)^{n-k}$$
+We may also insert maths expressions within the text, like this $f(k) = {n \choose k} p^{k} (1-p)^{n-k}$ or on their own, like this: $$f(k) = {n \choose k} p^{k} (1-p)^{n-k}$$
 
 ## Assessment and teaching philosophy:
 
@@ -95,7 +94,7 @@ Whereas plagiarism will not be tolerated, students ARE encouraged to work togeth
 
 ## About this document
 
-This document, which as available as a HTML file that's viewable on a web browser of your choice (anything will do, but we discourage using Internet Explorer) and as a PDF (accessible from the link at the top of any of the website's pages) that may be printed, was prepared by the software tools available to R via RStudio. We use the package called `bookdown` that may be accessed and read about [here](https://bookdown.org/yihui/bookdown/) to produce this documentation. The entire source code to reproduce this book is available from my [GitHub account](https://github.com/ajsmit/).
+This document, which as available as an HTML file that's viewable on a web browser of your choice (anything will do, but we discourage using Internet Explorer) and as a PDF (accessible from the link at the top of any of the website's pages) that may be printed, was prepared by the software tools available to R via RStudio. We use the package called `bookdown` that may be accessed and read about [here](https://bookdown.org/yihui/bookdown/) to produce this documentation. The entire source code to reproduce this book is available from my [GitHub repo](https://github.com/ajsmit/Basic_stats).
 
 ```{r rmarkdown, echo = TRUE, fig.margin = TRUE, fig.cap = "Bookdown hex."}
 knitr::include_graphics("figures/bookdown_hex_logo.png")
