--- a/02-data.Rmd
+++ b/02-data.Rmd
@@ -1,11 +1,10 @@
-
 # Types of data
 
 > *“The plural of anecdote is not data.”*
 >
 > --- Roger Brinner
 
-In this chapter we will, firstly, look at the different kinds of biological and environmental data that are typically encountered by most biologists. The data seen here is not an exclusive list of all the various types of data out there, but it should represent the bulk of our needs.
+In this chapter we will, firstly, look at the different kinds of biological and environmental data that are typically encountered by most biologists. The data seen here are not an exhaustive list of all the various types of data out there, but it should represent the bulk of our needs.
 
 After we have become familiar with the different kinds of data, we will look at summaries of these data, which is generally required as the starting point for our analysis. After summarising the data in tables and so forth, we may want to produce graphical summaries to see broad patterns and trends; visual data representations, which complement the tabulated data, will be covered in a later chapter (Chapter 3). Both of these approaches form the basis of 'exploratory data analysis.'
 
@@ -22,16 +21,16 @@ Integer data (discrete numbers or whole numbers), such as counts. For example, f
 These usually represent measured 'things,' such as something's heat content (temperature, measured in degrees Celsius) or distance (measured in meters or similar), etc. They can be rational numbers including integers and fractions, but typically they have an infinite number of 'steps' that depends on rounding (they can even be rounded to whole integers) or considerations such as precision and accuracy. Often, continuous data have upper and lower bounds that depends on the characteristics of the phenomenon being studied or the measurement being taken. In R, continuous data are denoted `num` or `<dbl>`.
 
 #### Dates
-Dates are a special class of continuous data, and there are many different replresenations of the date classes. This is a complex group of data, and we will not cover much of it here.
+Dates are a special class of continuous data, and there are many different representational of the date classes. This is a complex group of data, and we will not cover much of it here.
 
 ### Qualitative data
 Qualitative data may be well-defined categories or they may be subjective, and generally include descriptive words for classes (e.g. mineral, animal , plant) or rankings (e.g. good, better, best).
 
 #### Categorical data
-Also known as qualitative data. Because there are categories, the number of members belonging to each of the categories can be counted. For example, there are three red flowers, 66 purple flowers, and 13 red flowers. The categories cannot be ranked relative to each other; in the example just provided, for instance, no value judgement can be assigned to the different colours. It is not better to be red than it is to be purple. There are just fewer red flowers than purple ones. Contrast this to another kind of categortical data called 'ordinal data' (see next). This class of data in an R dataframe (or in a 'tibble') is indicated by `Factor` or `<fctr>`.
+Also known as qualitative data. Because there are categories, the number of members belonging to each of the categories can be counted. For example, there are three red flowers, 66 purple flowers, and 13 red flowers. The categories cannot be ranked relative to each other; in the example just provided, for instance, no value judgement can be assigned to the different colours. It is not better to be red than it is to be purple. There are just fewer red flowers than purple ones. Contrast this to another kind of categorical data called 'ordinal data' (see next). This class of data in an R dataframe (or in a 'tibble') is indicated by `Factor` or `<fctr>`.
 
 #### Ordinal data
-This is a type of categorical data where the classes are ordered (a synonymn is "ranked"), typically from low to high (or vice versa), but where the magnitude between the ordered classes cannot be precisely measured or quantified. In other words, the difference between them is somewhat subjective (i.e. it is qualitative rather than quantitative). These data are on an ordinal scale. The data may be entered as descriptive character strings (i.e. as words), or they may have been translated to an ordered vector of integers; for example, "1" for terrible, "2" for so-so, "3" for average, "4" for good and "5" for brilliant. Irrespective of how the data are present in the dataframe, computationally (for some calculations) they are treated as an ordered sequence of integers, but they are simultaneously treated as categories (say, where the number of responses that report "so-so" can be counted). Ordinal data usually answer questions such as, "how many categories can the phonomenon be divided into, and how does each category rank with respect to the others?" Columns containing this kind of data are named `Ord.factor` or `<ord>`.
+This is a type of categorical data where the classes are ordered (a synonym is "ranked"), typically from low to high (or vice versa), but where the magnitude between the ordered classes cannot be precisely measured or quantified. In other words, the difference between them is somewhat subjective (i.e. it is qualitative rather than quantitative). These data are on an ordinal scale. The data may be entered as descriptive character strings (i.e. as words), or they may have been translated to an ordered vector of integers; for example, "1" for terrible, "2" for so-so, "3" for average, "4" for good and "5" for brilliant. Irrespective of how the data are present in the dataframe, computationally (for some calculations) they are treated as an ordered sequence of integers, but they are simultaneously treated as categories (say, where the number of responses that report "so-so" can be counted). Ordinal data usually answer questions such as, "how many categories can the phenomenon be divided into, and how does each category rank with respect to the others?" Columns containing this kind of data are named `Ord.factor` or `<ord>`.
 
 ### Binary data
 Right or wrong? True or false? Accept or reject? Black or white? Positive or negative? Good or bad? You get the idea... In other words, these are observations or responses that can take only one of two mutually exclusive outcomes. In R these are treated as 'Logical' data that take the values of `TRUE` or `FALSE` (note the case), and they are indicated by `logi` or `<lgl>`.
@@ -94,4 +93,4 @@ The next way to see the contents of the tibble is to apply the `summary()` funct
 summary(chicks)
 ```
 
-This will serve well as an introduction to the next chapter, which is about the descriptive stastics. What are they, and how do we calculate them?
+This will serve well as an introduction to the next chapter, which is about the descriptive statistics. What are they, and how do we calculate them?
