--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ biblio-style: apalike
 description: 'This is a book about basic statistics: theory and practice.'
 fontsize: 10pt
 geometry: margin=4cm
-github-repo: ajsmit/basic_statistics
+github-repo: ajsmit/Basic_stats
 language: Australian
 link-citations: yes
 linkcolor: cyan
@@ -35,6 +35,6 @@ knitr::include_graphics("figures/walberg_assumptions.jpeg")
 This is a workshop about the practice of the basic statistics used by biologists, and not about the theory and mathematical underpinnings of the methods used. Each of the Chapters will cover a basic kind of statistical approach, and the main classes of data it applies to. Since much insight and understanding can be gained from visualising our data, we will also explore the main types of graphical summaries that best accompany the statistical methodologies. It is our intention to demonstrate how we go about analysing our data. 
 
 # Prerequisites {-}
-A prerequisite for this course is a basic proficiency in using R [@R2017]. The necessary experience will have been gained from completing the [Intro R Workshop: Data Manipulation, Analysis and Graphing](https://robwschlegel.github.io/Intro_R_Workshop/) Workshop that was part of your BCB Core Honours module (i.e. Biostatistics). You will also need a laptop with R and RStudio installed as per the instructions provided in that workshop. If you do not have a personal laptop, most computers in the 5th floor lab will be correctly set up for this purpose.
+A prerequisite for this course is a basic proficiency in using R [@R2017]. The necessary experience will have been gained from completing the [Intro R Workshop: Data Manipulation, Analysis, and Graphing](https://robwschlegel.github.io/Intro_R_Workshop/) Workshop that was part of your BCB Core Honours module (i.e. Biostatistics). You will also need a laptop with R and RStudio installed as per the instructions provided in that workshop. If you do not have a personal laptop, most computers in the 5th floor lab will be correctly set up for this purpose.
 
 
