--- a/11-correlation.Rmd
+++ b/11-correlation.Rmd
@@ -1,1 +1,9 @@
 # Correlation
+
+```{r prelim-opts, echo=FALSE}
+knitr::opts_chunk$set(
+  comment = "R>", 
+  warning = FALSE, 
+  message = FALSE
+)
+```
