--- a/08-parameteric.Rmd
+++ b/08-parameteric.Rmd
@@ -1,2 +1,88 @@
 # Parametric tests for comparisons of means
 
+```{r prelim-opts, echo=FALSE}
+knitr::opts_chunk$set(
+  comment = "R>", 
+  warning = FALSE, 
+  message = FALSE
+)
+```
+
+Rather than talking about t-tests and ANOVAs as separate things, let us acknowledge that they are similar ways of asking the same question. That question being, are the means of these two or more things we want to compare different, or the same? You may perhaps be more familiar with this question when it is presented as a set of hypotheses.
+
+> H0: Group A is not different from group B.
+>
+> H1: Group A is different from group B.
+
+This is a scientific question in the simplest sense. Often, for basic inquiries such as that posed above, we need to see if one group differs significantly from another. The way in which we accomplish this is by looking at the mean and variance within a set of data compared against another similar set. In order to do so appropriately however we need to first assume that both sets of data are normally distributed, and that the variance found within each set of data is similar. These are the two primary assumptions we learned about in Chapter 6, and if they are met then we may use paramteric tests. We will learn in Chapter 9 what we can do if these assumptions are not meant and we cannot adequately transform our data, meaning we will need to use non-parametric tests.
+
+## t-test
+
+A t-test is used when wants to compare two different sample sets against one another. This is also known as a two-factor or two level test. When one wants to compare multiple, more than two, sample sets against one another an ANOVA is required (see below). In order to illustrate how to perform a t-test in R we are going to once again use the `chicks` data, but only Diet 1 and 2 from day 21.
+
+```{r}
+# First grab the data
+chicks <- as_tibble(ChickWeight)
+
+# Then subset out only the sample sets to be compared
+chicks_sub <- chicks %>% 
+  filter(Diet %in% c(1, 2), Time == 21)
+```
+
+Once we have filtered our data we may now perform the t-test. Traditionally this would be performed with `t.test()`, but recent developments in R have made any testing for the comparison of means more convenient by wrapping everything up into the one single function `compare_means()`. We will need to use only this one signle function for all of the tests we will perform in this chapter as well as Chapter 9. To use `compare_means()` for a t-test we must simplu specify this in the `method` argument, as seen below:
+
+```{r}
+compare_means(weight ~ Diet, data = chicks_sub, method = "t.test")
+```
+
+As one may recall from the Intro R Workshop, whenever we want to give a formula to a function in R, we use the `~`. The formula used above, `weight ~ Diet`, reads in plain English as "weight as a function of diet". This is perhaps easier to understand as "Y as a function of X". This means that we are assuming whatever is to the left of the `~` is the dependant variable, and whatever is to the right is the independent variable. We then tell `compare_means()` to run a t-test on our `chicks_sub` dataframe and it does the rest. We see in the output above that this function gives us a rather tidy read-out of the information we require to test a potential hypothesis. Let's take a moment to look through the help file for this function and see what all of this means. Did the Diet 1 and 2 produce significantly fatter birds?
+
+## ANOVA
+
+### Single factor
+
+In the previous section we learned how to calculate the difference between two smaple sets. But what if, as is often the case, we want to compare three or more? Again, the `chicks` data provide an excellent example of how to do this. The base R function for an ANOVA is `aov()`, but we will rather continue to use `compare_means()`. To look for significant differences between all four diets on the last day of sampling we use this one line of code:
+
+```{r}
+compare_means(weight ~ Diet, data = filter(chicks, Time == 21), method = "anova")
+```
+
+When we now look at all four diets, rather than only 1 and 2, do they produce significantly different chicken weights after 21 days? If this seems to easy to be true, it's because we aren't quite done yet. The next step one must take is to run a Tukey test on the results of the ANOVA by wrapping `tukeyHSD()` around `aov()`:
+
+```{r}
+TukeyHSD(aov(weight ~ Diet, data = filter(chicks, Time == 21)))
+```
+
+The output of `tukeyHSD()` shows us tha pairwise comparisons of all of the groups we are comparing. Let's look at the help file for this function to better understand what the output means. Which of the groups are significantly different from one another? Why does the ANOVA return a significant result, but the Tukey test shows that not all of the groups are significantly different from one another?
+
+### Multiple factors
+
+What if we have multiple grouping variables, and not just one? To run an ANOVA on multiple factors we will need to use `aov()` rather than `compare_means()`. To specify the different factors we put them in our formula and separate them with a `+`:
+
+```{r}
+summary(aov(weight ~ Diet + as.factor(Time), data = filter(chicks, Time %in% c(20, 21))))
+```
+
+What question are we asking with the above line of code? Waht is the answer? Also, why did we wrap `Time` in `as.factor()`?
+
+It is also possible to look at what the effect is between gouping variables, and not just within the individual grouping variables. To do this we replace the `+` in our formula with `*`:
+
+```{r}
+summary(aov(weight ~ Diet * as.factor(Time), data = filter(chicks, Time %in% c(20, 21))))
+```
+
+How do these results differ from the previous set?
+
+One may also run a post-hoc Tukey test on these results the same as for a single factor ANOVA:
+
+```{r}
+TukeyHSD(aov(weight ~ Diet * as.factor(Time), data = filter(chicks, Time %in% c(20, 21))))
+```
+
+Jikes! That's a massive amount of results. What does all of this mean, and why is it so verbose?
+
+## Exercises
+
+### Exercise 1
+
+Write out the hypotheses that we tested for in this chapter and answer them based on the results we produced in class.
