--- a/12-model.Rmd
+++ b/12-model.Rmd
@@ -1,5 +1,13 @@
 # Models
 
+```{r prelim-opts, echo=FALSE}
+knitr::opts_chunk$set(
+  comment = "R>", 
+  warning = FALSE, 
+  message = FALSE
+)
+```
+
 ## Linear models
 
 ## Generalise linear models
