--- a/03-discriptive.Rmd
+++ b/03-discriptive.Rmd
@@ -1,4 +1,4 @@
-# Descriptive versus inferential statistics
+# Descriptive statistics: A focus on measures of central tendency and dispersion
 
 > *"I think it is much more interesting to live with uncertainty than to live with answers that might be wrong."*
 >
@@ -12,9 +12,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-<!-- Talk about inferential and descriptive statistics, and the distinction between the two... -->
+<!-- Maybe the nature of descriptive and inferential stats must be covered earlier, in Chpt 1 maybe -->
 
-Descriptive statistics and their associated statistical and graphical data summaries will be covered in Chapters 3 (this one) and Chapter 5. In Chapter 4 we will introduce the concepts of data distributions, knowledge of which is required to select the most appropriate inferential statistical methods. So, the materials covered in the next three chapters concern a broad discussion that will aid us in understanding our data better prior to analysing it. In this work flow it emerges that descriptive statistics generally precede inferential statistics.
+In this Chapter we will focus on basic descriptions of the data, and these initial forrays are built around measures of the central tendency of the data (the mean, median, mode) and the dispersion and variability of the data (standard deviations and their ilk). The materials covered in this and the next two chapters concern a broad discussion that will aid us in understanding our data better prior to analysing it, and before we can draw inference from it. In this work flow it emerges that descriptive statistics generally precede inferential statistics.
 
 Let us now turn to some of the most commonly used descriptive statistics, and learn about how to calculate them.
 
