--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -21,29 +21,29 @@ knitr::opts_chunk$set(
 
 ## Venue, date and time
 
-Quantitative Ecology is scheduled to replace Plant Ecophysiology, and will run between May 14th and June 29th, 2018. This workshop will take place from **9:00--16:00** on one day in each week during this period. There will also be a field component, where you will be taught about ecological field sampling in marine and terrestrial environments; this will also offer an opportunity to collect real data using actual ecological field methods (these will also be covered in the course), which we will then analyse using the multivariate methods learned in this workshop.
+Basic Statistics is the second half of the BSc (Hons) Biostats core module, and will run from 9 April to 20 April 2018. This workshop will take place each day from **9:00--16:00**. There will be an assignment due about six weeks after the end of this module, and it will provide the other half of the marks for the Biostats module. More on the assignment later.
 
 ## Course outline
 
 1. Introduction (this chapter)
 2. Types of data
 3. Descriptive statistics: Measures of location and dispersion
-4. The Normal distribution and probability determination using the normal curve
-5. Representing data graphically
+4. Representing data graphically
+5. The Normal distribution and probability determination using the normal curve
 6. T-tests (one-sample, two-sample and paired)
 7. Confidence intervals
 8. One-way ANOVA
-9. Introduction to univariate and multivariate ANOVA models
-10. Repeated measures ANOVA (or rather lme?)
+9. Multivariate ANOVA
+10. Repeated measures ANOVA (or rather LME?)
 11. Testing data for normality and transforming data
-12. Non-parametric tests---Mann-Whitney, Kruskal-Wallis (or rather glm?)
+12. Non-parametric tests---Mann-Whitney, Kruskal-Wallis (or rather GLM?)
 13. Chi square tests
 14. Correlation
 15. Linear regression
 
 The course content can broadly be classified into two parts: *Descriptive Statistics* and *Inferential Statistics*.
 
-Descriptive statistics and their associated statistical and graphical data summaries will be covered in Chapters 3 and Chapter 4. In Chapter 5 we will introduce the concepts of data distributions, knowledge of which is required to select the most appropriate inferential statistical methods. 
+Descriptive statistics and their associated statistical and graphical data summaries will be covered in Chapters 3 and 4. In Chapter 5 we will introduce the concepts of data distributions, knowledge of which is required to select the most appropriate inferential statistical methods. 
 
 Chapters 6-15 are about inferential statistics. Inferential tests allow us to evaluate hypotheses within a framework of probabalistic theory, which helps us infer the nature of a 'population' based on a smaller represenative set of samples. In partiucular, we can infer whether the property under scrutiny (arrived at by means of a designed experiment or a directed sampling programme) occured as a result of deterministic influences, or whether it is as a result of chance. 
 
@@ -53,7 +53,7 @@ The aim of this five-day introductory workshop is to guide you through the outli
 
 ## This is biology: why more R coding?
 
-Please refer to the [Intro R Workshop: Data Manipulation, Analysis and Graphing](https://robwschlegel.github.io/Intro_R_Workshop/) for why we feel strongly that you use R [@R2017] for the analyses that we will perform here. All of the reasons provided there are valid here too, but one reason perhaps more so than others --- R and RStudio promote the principles of *reproducible research*, and in fact make it very easy to implement. We will focus on some of these principles throughout the workshop, and the assignments will in fact require that you submit a fully functional working script, complete with all the notes, memos, examples, data, executable code, and output that will result from completing the course material. 
+Please refer to the [Intro R Workshop: Data Manipulation, Analysis and Graphing](https://robwschlegel.github.io/Intro_R_Workshop/) for why we feel strongly that you use R [@R2017] for the analyses that we will perform here. All of the reasons provided there are valid here too, but one reason perhaps more so than others---R and RStudio promote the principles of *reproducible research*, and in fact make it very easy to implement. We will focus on some of these principles throughout the workshop, and the assignments will require that you submit a fully functional working script, complete with all the notes, memos, examples, data, executable code, and output that will result from completing the course material. 
 
 What other options are there for analysing the kinds of data that we will encounter in biological research? Software packages like the ones you may be familiar with, such as Statistica and SPSS, are often used to perform many of these analyses. They are rather limited with regards to the full scope of modern statistical methods in use by biologists today, but many people still use these kinds of software as they provide the basic kinds analyses that still form the staple of the biological and medical sciences. For the many reasons provided above, we prefer to use R as the *engine* within which to do our biological data analysis. R is used by academic statisticians the world over, and it is therefore an excellent choice for our purpose here.
 
@@ -64,8 +64,6 @@ We assume that you already have R installed on your computer, as all of you will
 ## Resources
 
 ### Required reading
-
-### Resources about multivatiate ecological methods
 
 ### General resources about R
 
@@ -91,8 +89,7 @@ Consult these resources for more about R code style :
 
 We may also insert maths expressions within the text, like this $f(k) = {n \choose k} p^{k} (1-p)^{n-k}$ or on their own, like this: $$f(k) = {n \choose k} p^{k} (1-p)^{n-k}$$
 
-## Assessment and teaching philosophy:
-
+## Assessment and teaching philosophy
 Grades will be based on performance of two take home exams, and an individual project and homework problem sets. The exams and individual project will represent 30% of the grade. The homework problem sets will make up the remaining 10%. In cases where students are borderline between lower and higher grades, a high level of participation in the class discussions and class in general will win the day for the higher grade.
 
 Homework problems are essential to understanding of the materials. Although the homework comprises only 10% of the final grade, performance on the exams is usually correlated with effort on the homework problems.
