--- a/04-graphics.Rmd
+++ b/04-graphics.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r}
+library(tidyverse)
 library(ggpubr)
 ```
 
@@ -35,13 +36,30 @@ We have a sample size of 12 ($n=12$). In this sample, two are coloured blue, six
 
 ### Continuous data
 
-#### Frequency distribution
+#### Frequency distribution (histograms)
+
+```{r}
+ggplot(data = faithful, aes(x = eruptions)) +
+  geom_histogram()
+```
+
 
 <!-- show example of numerical summary -->
 <!-- show example of a histogram -->
 
 #### Relative frequency distributions
 
+```{r}
+faithful %>% 
+  mutate(eruptions = eruptions / length(eruptions)) %>%
+  ggplot(aes(x = eruptions)) +
+  geom_histogram(aes(y = ..ndensity..))
+
+# ggplot(data = faithful, aes(x = eruptions)) +
+#   geom_density(fill = "salmon", aes(y = ..density..)) +
+#   scale_x_continuous(expand = c(0, 0)) +
+#   scale_y_continuous(expand = c(0, 0))
+```
 <!-- show example of numerical summary -->
 <!-- show example of a histogram (desnity/probability) -->
 
