Added link to Poisson distribution app

--- a/05-distributions.Rmd
+++ b/05-distributions.Rmd
@@ -19,6 +19,10 @@ knitr::include_app("https://robert-schlegel.shinyapps.io/binomial_dist/", height
 
 ## Poisson distribution
 
+```{r}
+knitr::include_app("https://robert-schlegel.shinyapps.io/poisson_dist/", height = "600px")
+```
+
 ## Continuous uniform distribution
 
 ## Exponential distribution
