--- a/05-distributions.Rmd
+++ b/05-distributions.Rmd
@@ -13,7 +13,7 @@ Therefore, we must next learn about the different types of data distributions we
 
 ## Binomial distribution
 
-```{r}
+```{r, echo = FALSE}
 knitr::include_app("https://robert-schlegel.shinyapps.io/binomial_dist/", height = "600px")
 ```
 
