--- a/05-distributions.Rmd
+++ b/05-distributions.Rmd
@@ -7,6 +7,8 @@ knitr::opts_chunk$set(
   warning = FALSE, 
   message = FALSE
 )
+library(shiny)
+library(miniUI)
 ```
 
 Therefore, we must next learn about the different types of data distributions we are likely to encounter in the wild.
@@ -25,9 +27,30 @@ knitr::include_app("https://robert-schlegel.shinyapps.io/poisson_dist/", height 
 
 ## Continuous uniform distribution
 
+```{r}
+knitr::include_app("https://robert-schlegel.shinyapps.io/uniform_dist/", height = "600px")
+```
+
 ## Exponential distribution
 
+```{r}
+knitr::include_app("https://robert-schlegel.shinyapps.io/exponential_dist/", height = "600px")
+```
+
 ## Normal distribution
+
+```{r, echo = FALSE}
+sliderInput("bins", "Number of bins:", min = 1, max = 50, value = 30)
+
+renderPlot({
+  x <- faithful[, 2]  # Old Faithful Geyser data
+  bins <- seq(min(x), max(x), length.out = input$bins + 1)
+
+  # draw the histogram with the specified number of bins
+  hist(x, breaks = bins, col = 'darkgray', border = 'white')
+})
+```
+
 
 ```{r PDF, echo = FALSE, fig.margin = TRUE, fig.cap = "Boxplot and probability density function of a normal distribution *N*(0, σ^2^). Credit: [Wikipedia](https://en.wikipedia.org/wiki/Probability_density_function)"}
 knitr::include_graphics("figures/Boxplot_vs_PDF.svg")
@@ -35,6 +58,18 @@ knitr::include_graphics("figures/Boxplot_vs_PDF.svg")
 
 ## Chi-squared distribution
 
+```{r}
+knitr::include_app("https://robert-schlegel.shinyapps.io/chi_squared_dist/", height = "600px")
+```
+
 ## Student t distribution
 
+```{r}
+knitr::include_app("https://robert-schlegel.shinyapps.io/student_t_dist/", height = "600px")
+```
+
 ## F distribution
+
+```{r}
+knitr::include_app("https://robert-schlegel.shinyapps.io/f_dist/", height = "600px")
+```
