--- a/05-distributions.Rmd
+++ b/05-distributions.Rmd
@@ -13,29 +13,37 @@ Therefore, we must next learn about the different types of data distributions we
 
 ## Binomial distribution
 
-```{r, echo = FALSE}
-knitr::include_app("https://robert-schlegel.shinyapps.io/binomial_dist/", height = "600px")
+```{r}
+# knitr::include_app("https://robert-schlegel.shinyapps.io/binomial_dist/", height = "600px")
 ```
 
 ## Poisson distribution
 
 ```{r}
-knitr::include_app("https://robert-schlegel.shinyapps.io/poisson_dist/", height = "600px")
+# knitr::include_app("https://robert-schlegel.shinyapps.io/poisson_dist/", height = "600px")
 ```
 
 ## Continuous uniform distribution
 
 ```{r}
-knitr::include_app("https://robert-schlegel.shinyapps.io/uniform_dist/", height = "600px")
+# knitr::include_app("https://robert-schlegel.shinyapps.io/uniform_dist/", height = "600px")
 ```
 
 ## Exponential distribution
 
 ```{r}
-knitr::include_app("https://robert-schlegel.shinyapps.io/exponential_dist/", height = "600px")
+# knitr::include_app("https://robert-schlegel.shinyapps.io/exponential_dist/", height = "600px")
 ```
 
 ## Normal distribution
+
+```{r}
+library(plotly)
+x <- rnorm(100, 5, 1)
+plot_ly(x = x, type = "histogram") %>%
+  add_boxplot()
+```
+
 
 ```{r PDF, echo = FALSE, fig.margin = TRUE, fig.cap = "Boxplot and probability density function of a normal distribution *N*(0, σ^2^). Credit: [Wikipedia](https://en.wikipedia.org/wiki/Probability_density_function)"}
 knitr::include_graphics("figures/Boxplot_vs_PDF.svg")
@@ -44,17 +52,17 @@ knitr::include_graphics("figures/Boxplot_vs_PDF.svg")
 ## Chi-squared distribution
 
 ```{r}
-knitr::include_app("https://robert-schlegel.shinyapps.io/chi_squared_dist/", height = "600px")
+# knitr::include_app("https://robert-schlegel.shinyapps.io/chi_squared_dist/", height = "600px")
 ```
 
 ## Student t distribution
 
 ```{r}
-knitr::include_app("https://robert-schlegel.shinyapps.io/student_t_dist/", height = "600px")
+# knitr::include_app("https://robert-schlegel.shinyapps.io/student_t_dist/", height = "600px")
 ```
 
 ## F distribution
 
 ```{r}
-knitr::include_app("https://robert-schlegel.shinyapps.io/f_dist/", height = "600px")
+# knitr::include_app("https://robert-schlegel.shinyapps.io/f_dist/", height = "600px")
 ```
